--- a/Fedora/beaker/Dockerfile
+++ b/Fedora/beaker/Dockerfile
@@ -14,7 +14,7 @@ rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
 rm -f /lib/systemd/system/basic.target.wants/*;\
 rm -f /lib/systemd/system/anaconda.target.wants/*;
 VOLUME [ "/sys/fs/cgroup" ]
-RUN yum -y install beaker-server beaker-lab-controller mariadb-server MySQL-python tftp-server mod_ssl 
+RUN yum -y install openssh-server beaker-server beaker-lab-controller mariadb-server MySQL-python tftp-server mod_ssl 
 RUN systemctl enable beakerd beaker-proxy beaker-provision beaker-watchdog httpd mariadb tftp.socket
 
 # Setup the DB
@@ -23,6 +23,11 @@ ADD ./config_mariadb.sh /config_mariadb.sh
 RUN chmod 755 /config_mariadb.sh
 RUN /config_mariadb.sh
 
+# password: password
+RUN echo 'root:root' | chpasswd
+# Most likely best reference: https://bugzilla.redhat.com/show_bug.cgi?id=966807
+RUN /usr/bin/sed -e '/session    required     pam_loginuid.so/ s/^#*/#/' -i /etc/pam.d/sshd
+
 # Expos ports for httpd, beaker-proxy, tftp
-EXPOSE 80 8000 69
+EXPOSE 80 8000 69 22
 CMD ["/usr/sbin/init"]
