updates to ansible tips

--- a/Fedora/ansible/Dockerfile
+++ b/Fedora/ansible/Dockerfile
@@ -1,6 +1,7 @@
 FROM fedora:21
 
-RUN yum -y install ansible sshpass
+RUN yum -y install ansible sshpass git openssh-clients
 
 ADD help /root/help
 
+CMD bash
