redis: listen on all interfaces

--- a/Fedora/redis/Dockerfile
+++ b/Fedora/redis/Dockerfile
@@ -2,4 +2,4 @@ FROM fedora:21
 RUN yum -y install redis
 VOLUME /var/lib/redis
 EXPOSE 6379
-CMD ["/usr/bin/redis-server", "/etc/redis.conf", "--daemonize", "no"]
+CMD ["/usr/bin/redis-server", "/etc/redis.conf", "--daemonize", "no", "--bind", "0.0.0.0"]
