amitsaha/develop: add wget

--- a/dev_workflow/development/Dockerfile
+++ b/dev_workflow/development/Dockerfile
@@ -1,3 +1,4 @@
+# amitsaha/develop
 FROM fedora:21
-RUN yum -y install git make gcc gcc-c++ python3
+RUN yum -y install git make gcc gcc-c++ python3 wget curl
 CMD bash
