grab bag of changes

--- a/dev_workflow/development/Dockerfile
+++ b/dev_workflow/development/Dockerfile
@@ -1,4 +1,4 @@
 # amitsaha/develop
 FROM fedora:21
-RUN yum -y install git make gcc gcc-c++ python3 wget curl
+RUN yum -y install git make gcc gcc-c++ python3 wget curl emacs-nox
 CMD bash
