--- a/Fedora/systemd/Dockerfile
+++ b/Fedora/systemd/Dockerfile
@@ -1,4 +1,4 @@
-# Runs systemd (with apache)
+# Runs systemd
 # Based off: http://developerblog.redhat.com/2014/05/05/running-systemd-within-docker-container/
 
 FROM registry.hub.docker.com/fedora:21
@@ -12,9 +12,4 @@ rm -f /lib/systemd/system/sockets.target.wants/*udev*; \
 rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
 rm -f /lib/systemd/system/basic.target.wants/*;\
 rm -f /lib/systemd/system/anaconda.target.wants/*;
-RUN yum -y install httpd
-RUN systemctl enable httpd
-
-# Expose port
-EXPOSE 80
 CMD ["/usr/sbin/init"]
