Docker compose based mariadb + data container example

--- a/data-containers/mariadb/old/data_container/docker-compose.yml
+++ b/data-containers/mariadb/old/data_container/docker-compose.yml
@@ -2,12 +2,11 @@ mariadbdata:
   image: fedora
   volumes:
     - /var/lib/mysql
-  volumes:
     - /var/log/mariadb
-  command: bash -c "true"
+  command: echo "data"
 
 linux:
   image: fedora
   volumes_from:
     - mariadbdata
-  command: mount
+  command: ls -lrt /var/lib/
