--- a/windows/headless-chrome/Dockerfile
+++ b/windows/headless-chrome/Dockerfile
@@ -1,7 +1,4 @@
-FROM microsoft/windowsservercore
-SHELL ["powershell"]
-
-RUN Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+FROM amitsaha/chocolatey
 RUN choco install -y googlechrome
 
 EXPOSE 9222
